[tool.poetry]
name = "botsexamples"
version = "0.1.0"
description = ""
authors = ["Kirill <randomnik192@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
instagrapi = "^1.16.41"
peewee = "^3.15.4"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
