[tool.poetry]
name = "botsexamples"
version = "0.1.0"
description = ""
authors = ["Kirill <randomnik192@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
instagrapi = "^1.16.41"
peewee = "^3.15.4"
tqdm = "^4.64.1"
pillow = "^9.4.0"
fake-useragent = "^1.1.1"
psycopg2-binary = "^2.9.5"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
